# andrena

./: .gitignore  Cargo.toml  Dockerfile  pytorch.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  rust.yml
src/: ai_context.rs  context.rs  main.rs
src/actors/: channel.rs  channel_sup.rs  gpt.rs  mod.rs  mqtt.rs  mqtt_actor.rs  old_channel.rs  openai.rs  openai_actor.rs  typing.rs  typing_actor.rs
src/actors/communication/: discord.rs  mod.rs  typing.rs  websocket.rs
src/actors/tools/: embeddings.rs  github.rs  mod.rs  transcribe.rs
src/commands/: clear_context.rs  mod.rs
src/confluence/: session.rs
src/context/: generic_message.rs  mod.rs  text_attachment.rs  traits.rs  youtube_video.rs
src/graph/: mod.rs
