[package]
name = "andrena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.1"
async-recursion = "1.0.4"
async-trait = "0.1.68"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
rustube = "0.6.0"
serde = "1.0.159"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tiktoken-rs = "0.3.3"
tokio = { version = "1.26.0", features = ["full"] }
