[package]
name = "andrena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.1"
async-recursion = "1.0.4"
log = "0.4.17"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
rustube = "0.6.0"
serde = { version = "1.0.159", features = ["serde_derive"] }
tiktoken-rs = "0.3.3"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.95"
pretty_env_logger = "0.4.0"
paho-mqtt = "0.12.1"
rust-bert = "0.20.0"
anyhow = "1.0.70"
ractor =  { git = "https://github.com/slawlor/ractor.git", branch = "actor_ref_message_type", features = ["cluster"]}
ractor_cluster = { git = "https://github.com/slawlor/ractor.git", branch = "actor_ref_message_type"}
async-trait = "0.1.68"
bincode = "1.3.3"
